Changes: Partly fixes NB#160236 - Red background and unreadable names and icons in Applet Library RevBy: TrustMe Details: We had a hardcoded white text color here. Changed it to $COLOR_FOREGROUND so it works with the theme that has white background.

--- a/base/dui/libdui/style/duiappletinventorystyle.css
+++ b/base/dui/libdui/style/duiappletinventorystyle.css
@@ -15,7 +15,7 @@ DuiAbstractLayoutPolicyStyle#DuiAppletInventoryFlowLayoutPolicy.Portrait {
 
 DuiButtonStyle#DuiAppletButton {
     font: $FONT_SMALL;
-    text-color: #FFFFFF;
+    text-color: $COLOR_FOREGROUND;
     icon-size: 64 64;
 }
 DuiButtonStyle#DuiAppletButton.Landscape {
